[Autocomplete] > Print -> in progress

--- a/autocomplete/Makefile
+++ b/autocomplete/Makefile
@@ -5,7 +5,7 @@
 ## Login   <zimmer_n@epitech.net>
 ## 
 ## Started on  Fri Nov 13 15:25:22 2015 Nicolas Zimmermann
-## Last update Wed May 25 18:03:49 2016 Nicolas Zimmermann
+## Last update Wed May 25 19:42:45 2016 Nicolas Zimmermann
 ##
 
 CC	= gcc
@@ -14,7 +14,7 @@ RM	= rm -f
 
 CFLAGS	+= -W -Wall -Werror -Wextra
 CFLAGS	+= -I./include -I../lib/libmy/include -I../lib/libmy/include -I../lib/libmy_printf/include
-CFLAGS	+= -L../lib/libmy -lmy -L../lib/libmy_printf -lmy_printf -lncurses
+CFLAGS	+= -L../lib/libmy_printf -lmy_printf -L../lib/libmy -lmy -lncurses
 
 NAME   	= autocomplete
 
@@ -22,7 +22,10 @@ SRCS	= main.c \
 	list/file_list.c \
 	list/free_list.c \
 	list/show_list.c \
-	OM42sh/OM42sh.c
+	list/get_elem_nb.c \
+	termcaps/my_getmaxyx.c \
+	OM42sh/OM42sh.c \
+	OM42sh/display_autocomplete.c
 
 OBJS	= $(SRCS:.c=.o)
 
